[gd_scene load_steps=9 format=3 uid="uid://cyfeifp6cavyw"]

[ext_resource type="Script" path="res://scenes/bullet.gd" id="1_3lejh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ub3q"]
albedo_color = Color(0.566967, 0.566967, 0.566967, 1)
metallic = 0.73
roughness = 0.09
emission_enabled = true
emission = Color(0.798977, 0.5324, 0.0815173, 1)
emission_energy_multiplier = 20.0

[sub_resource type="SphereMesh" id="SphereMesh_latc1"]
material = SubResource("StandardMaterial3D_3ub3q")
radius = 0.1
height = 0.2
radial_segments = 8
rings = 8

[sub_resource type="SphereShape3D" id="SphereShape3D_08rxs"]
radius = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w4mw1"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6utah"]
spread = 180.0
initial_velocity_min = -5.0
initial_velocity_max = 5.0
gravity = Vector3(0, -5, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f3sdd"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qvsxj"]
material = SubResource("StandardMaterial3D_f3sdd")
radius = 0.05
height = 0.1
radial_segments = 4
rings = 4
is_hemisphere = true

[node name="Bullet" type="Node3D"]
script = ExtResource("1_3lejh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_latc1")

[node name="Human_Area" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Human_Area"]
shape = SubResource("SphereShape3D_08rxs")

[node name="General_Area" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 297

[node name="CollisionShape3D" type="CollisionShape3D" parent="General_Area"]
shape = SubResource("SphereShape3D_08rxs")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="BloodExplosion" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_w4mw1")
emitting = false
amount = 40
lifetime = 0.5
one_shot = true
process_material = SubResource("ParticleProcessMaterial_6utah")
draw_pass_1 = SubResource("SphereMesh_qvsxj")

[connection signal="body_entered" from="Human_Area" to="." method="_on_human_area_body_entered"]
[connection signal="body_entered" from="General_Area" to="." method="_on_general_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
